--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 build/
 *.egg-info/
 .idea/
+__pycache__
+
+# We want to work with as many versions of our deps as possible as we can't know what distributions might have in their repos
+# So we'll act like we're a library when it comes to dependency versions
+poetry.lock
