Change usage to use selectors and actions
The user has to "select" packages by specifying certain filters.
This can be packages with a specific version, every package that has changed according to git, etc
Once the selectors have been set, the user can specify what actions to execute on them
This can for example be changing the pkgver to a new one, or build them all in the right order

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-.venv/
+.venv
 build/
 *.egg-info/
 .idea/
 __pycache__
+.vscode
 
 # We want to work with as many versions of our deps as possible as we can't know what distributions might have in their repos
 # So we'll act like we're a library when it comes to dependency versions
