--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,5 +30,9 @@ mypy = "^0.961"
 requires = ["poetry-core>=1.0.5"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.isort]
+skip = [".venv"]
+profile = "black"
+
 [tool.black]
-line-length = 80
+line-length = 120
