--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2022 Bart Ribbers <bribbers@disroot.org>
+# SPDX-License-Identifier: CC0-1.0
+
 .venv
 build/
 *.egg-info/
