--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2022 Bart Ribbers <bribbers@disroot.org>
+# SPDX-License-Identifier: CC0-1.0
+
 [tool.poetry]
 name = "aportsknife"
 version = "0.0.1"
