--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,5 @@
+# SPDX-FileCopyrightText: 2022 Bart Ribbers <bribbers@disroot.org>
+# SPDX-License-Identifier: CC0-1.0
+
 [pycodestyle]
 max-line-length = 80
