--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,9 @@
 # SPDX-License-Identifier: CC0-1.0
 
 [pycodestyle]
-max-line-length = 80
+max-line-length = 120
+
+[flake8]
+exclude = .git,__pycache__,.venv,venv,.env,env
+max-line-length = 120
+per-file-ignores = __init__.py:F401
