--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ aportsknife = "aportsknife:main"
 python = ">=3.10,<4.0"
 pyxdg = "0.28"
 GitPython = "3.1.27"
-PyYAML = "6.0"
+tomlkit = "^0.11.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
